--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
 </div>
   </section>
-  <footer class="end text-center" data-aos="fade-up" data-aos-duration="3000">
+  <footer class="end text-center">
     <h5>Created with <i class="bi bi-heart-fill"></i> by <a href="https://www.instagram.com/r.rain17"><b>Mulis Sahrain</b></a></h5>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
